tests/cheri-ci/expected/0066-const2.error.c.expected
cheri-ci/0066-const2.error.c:6:3: error: constraint violation: expression is not assignable
  x = 0;  // this is an error
  ~ ^
ยง6.5.16#2: 
2   An assignment operator shall have a modifiable lvalue as its left operand.
